Reproducer for quarkusio/quarkus#54885